<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shop"
            android:title="@string/item_shop" />
        <item
            android:id="@+id/nav_addbani"
            android:icon="@drawable/ic_money"
            android:title="@string/item_pl" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_main"
            android:title="@string/item_contacts" />
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_add_in_basket"
            android:title="@string/item_main" />
    </group>

    <item android:title="@string/item_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/item_find_friends" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/item_help" />
        </menu>
    </item>

</menu>
