<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context="com.example.admin.aplicationforcursaci.HamburgerList"
    tools:showIn="@layout/app_bar_hamburger_list">

    <LinearLayout
        android:id="@+id/lin_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">


        <LinearLayout
            android:id="@+id/lin_fr_img2"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                app:srcCompat="@drawable/welcomehome" />
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/v_flipper"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:inAnimation="@anim/flipin"
            android:outAnimation="@anim/flipout">

        </ViewFlipper>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/interesting"
            android:textColor="@color/Black"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/lin_fr_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/computer"
                android:text="@string/computers"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/popular"
                android:text="@string/popular"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/phone"
                android:text="@string/phones"
                android:textAlignment="center" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:srcCompat="@drawable/parislove" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/back1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Каталог"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:visibility="visible" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:srcCompat="@drawable/children" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/back2" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Скидки"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:visibility="visible" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:srcCompat="@drawable/ocean" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/back3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Пополнение счета"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:visibility="visible" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:srcCompat="@drawable/phone" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/back4" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Гарантии"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:visibility="visible" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/rectangle_rounded_some">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:onClick="onSocialButtonClick"
                    app:srcCompat="@drawable/logo_facebook" />

                <ImageView
                    android:id="@+id/imageButton2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:onClick="onSocialButtonClick"
                    app:srcCompat="@drawable/logo_youtube" />

                <ImageView
                    android:id="@+id/imageButton3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:onClick="onSocialButtonClick"
                    app:srcCompat="@drawable/logo_telega" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="7dp"
                android:text="Contact us"
                android:textColor="@color/White"
                android:textSize="12sp" />
        </FrameLayout>

    </LinearLayout>


</ScrollView>

